--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif|Satisfy');
 
 body {
-  background: linear-gradient(45deg, #613A43, #CFAAA3);
+  /*background: linear-gradient(45deg, #613A43, #CFAAA3);*/
+  background-color: #686868;
 font-family: 'Noto Serif', serif;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 #app {
@@ -121,3 +122,7 @@ textarea#ingredients {
     justify-content: flex-end;
 }
 
+a:hover {
+  text-decoration: none;
+  opacity: 0.8;
+}
