--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   /*background: linear-gradient(45deg, #613A43, #CFAAA3);*/
-  background-color: #686868;
+  background-color: #e5e5e5;
 font-family: 'Noto Serif', serif;
   width: 100%;
   height: 100%;
