--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif|Satisfy');
 
 body {
-  /*background: linear-gradient(45deg, #613A43, #CFAAA3);*/
   background-color: #e5e5e5;
-font-family: 'Noto Serif', serif;
+  font-family: 'Noto Serif', serif;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 #app {
-    width: 60rem;
-    margin: 2rem auto;
-    box-shadow: 20px 20px 100px #36384C;
-    border-radius: 5px;
-    background: linear-gradient(45deg, #849974, #36384C);
+  width: 60rem;
+  margin: 2rem auto 5rem;
+  box-shadow: 20px 20px 100px #36384C;
+  border-radius: 5px;
+  background: linear-gradient(45deg, #849974, #36384C);
 }
 
 .recipe-wrapper {
   padding: 4rem;
+  position: relative;
 }
 
 .title {
@@ -48,13 +48,31 @@ font-family: 'Noto Serif', serif;
   z-index: 1;
 }
 
+.panel-group .panel {
+  opacity: 0.75;
+}
+
 .panel-default {
   border: 0px;
 }
 
 .panel-default > .panel-heading{
-  background-color: #E9DCCD;
+  background-color: rgba(233,220,205,0.5);
   color: #849974;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+  padding: 0;
+}
+
+.panel-heading a {
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+}
+
+.panel-heading a:hover {
+  text-decoration: none;
+  opacity: 0.81;
 }
 
 .panel-title {
@@ -79,7 +97,7 @@ font-family: 'Noto Serif', serif;
 .utensils-icon {
   position: absolute;
   top: 5rem;
-  left: 104rem;
+  right: 1rem;
   opacity: 0.5;
   color: #849974;
 }
@@ -120,9 +138,4 @@ textarea#ingredients {
 .btn-group {
     display: flex;
     justify-content: flex-end;
-}
-
-a:hover {
-  text-decoration: none;
-  opacity: 0.8;
 }
